Adjusted wrap element and fixed display for navbar

--- a/dtc-final-project/styles.css
+++ b/dtc-final-project/styles.css
@@ -30,6 +30,7 @@ body {
     background: rgba(20, 6, 20, 0.6);
     color: #cec6cc;
     margin-bottom: 1rem;
+    border: 2px solid rgba(231, 118, 226, 0.8);
 }
 
 .logo {
